YUK-18682 Read now from Hardware Config page causing webserver error Reuse existing relays when relay address updates come in Factored some boilerplate into updateIfPresent() helper